Change for JNKRR

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -245,3 +245,14 @@ label.active {
 .about-text {
     font-size: 21px;
 }
+
+.service-title {
+    margin: 25px 0;
+    font-size: 24px !important;
+    font-weight: 600 !important;
+}
+
+.service-description {
+    margin-top: 15px;
+    font-size: 21px;
+}
